
LaF version 0.8.6
===============================================================================
* Bug fixed in csv-reader with separators in first line contained in quotes.

LaF version 0.8.5
===============================================================================
* Allow user to set encoding for `read_dm_blaise`. As these files are usually
  used on windows systems the default encoding is latin-1.

LaF version 0.8
===============================================================================
* Detects and ignores byte-order-mark
* Added option to ignore (set NA) fields that could not be converted; 
  previously this generated an error.

LaF version 0.7
===============================================================================
* Fixed memory leak
* Added option to show progress bar in process_blocks

LaF version 0.6.3
===============================================================================
* Minor update. Fixes error in detect_dm_csv with sample = TRUE. As reported
  by spinwards. 

LaF version 0.6.2
===============================================================================
* Minor update. Fixes error with '~' in the path name.

LaF version 0.6.1
===============================================================================
* Minor update. Fixes bug in the C++ code. This bug only affected colfreq and
  colnmissing one some platforms when there are missing values in the numeric
  columns. 

LaF version 0.6
===============================================================================
* Internal changes: switched documentation to roxygen; changes to namespace and
  description files to pass tests.

LaF version 0.5
===============================================================================
* Added ability to use data models for opening files. These contain a 
  description of the column names and column types etc. The data models can be
  saved to and read from YAML-files.  For CSV files the data models can also be