@@ -3,6 +3,7 @@
 cran-comments.md
 README.md
 Makefile
+work/
 
 bug.R
 
